# project-forge

./: .changelog-config.yaml  .cookiecutter.json  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  composition.schema.json  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: build-python.yaml  bump-version-preview.yaml  bump-version.yaml  docs-final.yml  docs-preview.yml  publish-docs-preview.yaml  publish-docs.yaml  release-github.yaml  release.yaml  test.yaml  version-preview.yaml
assets/images/: ProjectForgeLogo.afdesign
cli/: index.html
docs/: cli.md  explanation.md  gen_click_doc.py  gen_doc_stubs.py  glossary.md  index.md  installation.md  quickstart.md
docs/howtos/: index.md
docs/reference/: composition.md  index.md  location.md  pattern.md  question.md  validations.md
docs/tutorials/: create_a_pattern.md  (+1 more)
explanation/: index.html
glossary/: index.html
howtos/: index.html
installation/: index.html
project_forge/: __init__.py  caching.py  cli.py  git_commands.py  rendering.py  settings.py  tui.py  utils.py
quickstart/: index.html
reference/: index.html
search/: search_index.json
tests/: conftest.py  mocks.py  test_caching.py  test_cli.py  test_composition.py  test_git_commands.py  test_pattern.py  test_project_forge.py  test_rendering.py  test_task.py  test_testing.py  test_tui.py
tests/fixtures/python-boilerplate/{{ repo_name }}/: pyproject.toml
tools/: export_schemas.py
tutorials/: index.html
(+868 files in other folders)
